--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
+  <meta content="izzxo.github.io/Akram/" property="og:mohadaghgh" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>موقعي الشخصي - أكرم</title>
   <script src="https://cdn.tailwindcss.com"></script>
@@ -69,6 +70,7 @@
 
 </body>
 </html>
+
 
 
 
